# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/Localizer--main--1.1
#

2005-01-09 13:26:20 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-12

    Summary:
      get ready to release 1.1.0b4
    Revision:
      Localizer--main--1.1--patch-12


    modified files:
     CHANGES.txt Changelog version.txt


2005-01-06 13:14:39 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-11

    Summary:
      add support for domains to the i18n namespace (ZPT)
    Revision:
      Localizer--main--1.1--patch-11


    modified files:
     Changelog __init__.py


2004-12-16 19:02:02 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-10

    Summary:
      get ready to release 1.1.0b3
    Revision:
      Localizer--main--1.1--patch-10

    Get ready to release 1.1.0b3

    new files:
     .arch-ids/CHANGES.txt.id CHANGES.txt

    modified files:
     Changelog RELEASE-1.1.0.txt.en version.txt


2004-11-29 12:47:16 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-9

    Summary:
      add italian translation
    Revision:
      Localizer--main--1.1--patch-9

    Add italian translation, thanks to Marco Bizzarri.

    new files:
     locale/.arch-ids/it.po.id locale/it.po

    modified files:
     Changelog TODO.txt


2004-11-27 20:10:46 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-8

    Summary:
      get ready to release 1.1.0b2
    Revision:
      Localizer--main--1.1--patch-8

    Get ready to release 1.1.0b2.

    removed files:
     .arch-ids/INSTALL.txt.id INSTALL.txt

    modified files:
     Changelog README.txt RELEASE-1.1.0.txt.en TODO.txt version.txt


2004-11-22 18:59:00 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-7

    Summary:
      move Gettext to iHotfix
    Revision:
      Localizer--main--1.1--patch-7

    Move Gettext to iHotfix. This removes the last dependency of iKaaro on
    Localizer.

    new files:
     .arch-ids/Gettext.py.id Gettext.py

    removed files:
     .arch-ids/Gettext.py.id Gettext.py
